xine-lib (1.1.12) 2008-??-??
  * Fixed and improved the PulseAudio driver.
  * Fixed a regression in 1.1.11.1 which broke Quicktime container handling.
  * And another, this time in the Matroska demuxer.

xine-lib (1.1.11.1) 2008-03-30
  * Security fixes:
    - Integer overflows in FLV, Qt, Real, WC3Movie, Matroska and FILM
      demuxers, allowing remote attackers to trigger heap overflows and
      possibly execute arbitrary code. (CVE-2008-1482)
  * Added a few more memory allocation checks to the above demuxers.
  * WAV file playback fix: don't assume that the first chunk is "fmt ".
  * Don't try to play partial 24-bit AIFF frames (decoder would lose data).
  * Fixed AIFF comment chunk handling and sample rate reading.
  * LPCM fixes: input over-reading, conversion of 24-bit samples.

xine-lib (1.1.11) 2008-03-19
  * Security fixes:
    - Array Indexing Vulnerability in sdpplin_parse(). (CVE-2008-0073)
  * Reworked the plugin directory naming so that external plugins don't have
    to be rebuilt for every release. We now use a naming scheme based on the
    API/ABI versioning, checking older directories - with this release, the
    plugin directory name is 1.20, and if this gets bumped to 1.21 in a
    future release, 1.20 will still be available for external plugins.
    (Any directories not 1.* won't be looked in.)
  * Made the version parsing much more reliable; it wasn't properly coping
    with four-part version numbers. This affects any program whose build
    scripts use xine-lib's automake macros.
  * Fixed an off-by-one in the FLAC security fix patch. This breakage was
    causing failure to play some files.
  * Support 16-bit big-endian DTS audio.
  * Improved frame snapshot API. (ABI extension.)
  * Re-add support for # (stream parameter separator) in raw filenames,
    without the bugs found in the original implementation.
    (This is a convenience feature for users only. Front ends which rely on